Fix for flickering blue mobile menu

--- a/css/allcss.css
+++ b/css/allcss.css
@@ -28013,6 +28013,7 @@ blockquote p {
 }
 
 .left-off-canvas-menu {
+    display: none;
     -webkit-backface-visibility: hidden;
     background: #134a6a;
     bottom: 0;
